# quanTrade

./: .gitignore  LICENSE.txt  README.md  TODO.MD  app.py  config.py  pyproject.toml  requirements.txt  ruff.toml
docs/: design_documentation.md
notebooks/: strategy_development.ipynb
scripts/: backtesting_script.py
src/: backtester.py  config.py  data_fetcher.py  data_processor.py  indicators.py  order_book_fetcher.py  trade_executor.py  utils.py  visualizer.py
src/models/: model_training.py  stock_growth_predictor.py
src/strategies/: __init__.py  growth_strategy.py  sma_crossover.py
tests/: test_app.py  test_backtester.py  test_backtrader.py  test_data_fetcher.py  test_data_processor.py  test_indicators.py  test_models.py  test_strategies.py
