[project]
name = "trading-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit",
	"requests>=2.25.1",
	"pandas>=1.2.0",
    "numpy>=1.19.5",
    "matplotlib>=3.3.3",
    "scipy>=1.6.0",
    "scikit-learn>=0.24.0",
    "pytest>=8.3.3"
]

[tool.pytest.ini_options]
pythonpath = "src"